--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "serve": "^14.2.0",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
+    "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
